ORACLE DB CONNECTION 연동작업

--- a/IFW.DATA/App.config
+++ b/IFW.DATA/App.config
@@ -3,16 +3,9 @@
 	<configSections>
 		<section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.23.1, Culture=neutral, PublicKeyToken=89b483f429c47342" />
 	</configSections>
-	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-	</startup>
-
-	<!-- ORACLEDB 연결 DB주소로 바꿔주면 됨. -->
-	<connectionStrings> 
-		<add name="OracleDb" connectionString="Data Source=localhost:1521/xe;User ID=system;Password=1234;" providerName="Oracle.ManagedDataAccess.Client" />
+	<connectionStrings>
+		<add name="OracleDb" connectionString="Data Source=호스트:포트/서비스명;User ID=계정;Password=비밀번호;" providerName="Oracle.ManagedDataAccess.Client" />
 	</connectionStrings>
-	<!-- ORACLEDB 연결 END -->
-	
 	<system.data>
 		<DbProviderFactories>
 			<remove invariant="Oracle.ManagedDataAccess.Client" />
