--- a/IFW.DATA/IFW.DATA.csproj
+++ b/IFW.DATA/IFW.DATA.csproj
@@ -1,20 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2A228948-4A7D-434E-AF3E-005BFDA54D19}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <RootNamespace>library_support_system</RootNamespace>
-    <AssemblyName>library_support_system</AssemblyName>
+    <ProjectGuid>{8D481BD9-C1E2-4471-95FA-4276FBF143A3}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>IFW.DATA</RootNamespace>
+    <AssemblyName>IFW.DATA</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -36,11 +34,17 @@
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.8.0.0\lib\net462\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
+    <Reference Include="Oracle.ManagedDataAccess, Version=4.122.23.1, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL">
+      <HintPath>..\packages\Oracle.ManagedDataAccess.23.9.0\lib\net472\Oracle.ManagedDataAccess.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.4.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.6.0\lib\net462\System.Buffers.dll</HintPath>
     </Reference>
     <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.ConfigurationManager, Version=9.0.0.6, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Configuration.ConfigurationManager.9.0.6\lib\net462\System.Configuration.ConfigurationManager.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=6.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.6.0.2\lib\net461\System.Diagnostics.DiagnosticSource.dll</HintPath>
@@ -74,107 +78,26 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="book_check.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="book_check.Designer.cs">
-      <DependentUpon>book_check.cs</DependentUpon>
-    </Compile>
-    <Compile Include="book_enroll.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="book_enroll.Designer.cs">
-      <DependentUpon>book_enroll.cs</DependentUpon>
-    </Compile>
-    <Compile Include="book_rental.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="book_rental.Designer.cs">
-      <DependentUpon>book_rental.cs</DependentUpon>
-    </Compile>
-    <Compile Include="book_return.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="book_return.Designer.cs">
-      <DependentUpon>book_return.cs</DependentUpon>
-    </Compile>
-    <Compile Include="home.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="home.Designer.cs">
-      <DependentUpon>home.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="DataParameter.cs" />
+    <Compile Include="DataCommand.cs" />
+    <Compile Include="DataCommandShell.cs" />
+    <Compile Include="OracleConnector.cs" />
+    <Compile Include="OracleProcedureHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="user_check.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="user_check.Designer.cs">
-      <DependentUpon>user_check.cs</DependentUpon>
-    </Compile>
-    <Compile Include="user_register.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="user_register.Designer.cs">
-      <DependentUpon>user_register.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="book_check.resx">
-      <DependentUpon>book_check.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="book_rental.resx">
-      <DependentUpon>book_rental.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="home.resx">
-      <DependentUpon>home.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="Oracle.DataAccess.Common.Configuration.Section.xsd">
       <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <EmbeddedResource Include="user_register.resx">
-      <DependentUpon>user_register.cs</DependentUpon>
-    </EmbeddedResource>
-    <None Include="packages.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Main.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\img.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\다운로드.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Clipboard - 2025년 6월 30일 오후 1시 48분.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\free-icon-power-switch-4139573.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\free-icon-power-switch-4139573 %281%29.png" />
+    <None Include="Oracle.ManagedDataAccess.Client.Configuration.Section.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
