--- a/IFW.DATA/packages.config
+++ b/IFW.DATA/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
+  <package id="Oracle.ManagedDataAccess" version="23.9.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="9.0.6" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.2" targetFramework="net472" />
   <package id="System.Formats.Asn1" version="8.0.1" targetFramework="net472" />
   <package id="System.Memory" version="4.6.0" targetFramework="net472" />
