프로로시저 코드 보완

--- a/library_support_system/Main.config
+++ b/library_support_system/Main.config
@@ -5,7 +5,7 @@
 	</startup>
 	<!-- ORACLEDB 연결 DB주소로 바꿔주면 됨. -->
 	<connectionStrings>
-		<add name="OracleDb" connectionString="Data Source=localhost:1521/xe;User ID=system;Password=1234;" providerName="Oracle.ManagedDataAccess.Client" />
+		<add name="OracleDb" connectionString="Data Source=deu.duraka.shop:5003/xe;User ID=sys;Password=mCYxbK03o;" providerName="Oracle.ManagedDataAccess.Client" />
 	</connectionStrings>
 	<!-- ORACLEDB 연결 END -->
 	<runtime>
