--- a/library_support_system/library_support_system.csproj
+++ b/library_support_system/library_support_system.csproj
@@ -105,12 +105,9 @@
     <Compile Include="book_return.Designer.cs">
       <DependentUpon>book_return.cs</DependentUpon>
     </Compile>
-    <Compile Include="home.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="home.Designer.cs">
-      <DependentUpon>home.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Models\I모델정의.cs" />
+    <Compile Include="Models\모델정의.cs" />
+    <Compile Include="Presenters\HomePresenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="user_check.cs">
@@ -119,20 +116,25 @@
     <Compile Include="user_check.Designer.cs">
       <DependentUpon>user_check.cs</DependentUpon>
     </Compile>
-    <Compile Include="user_register.cs">
+    <Compile Include="Views\IUser_Res.cs" />
+    <Compile Include="Views\User_Res.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="user_register.Designer.cs">
-      <DependentUpon>user_register.cs</DependentUpon>
+    <Compile Include="Views\User_Res.Designer.cs">
+      <DependentUpon>User_Res.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\HomeView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\HomeView.Designer.cs">
+      <DependentUpon>HomeView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\IHomeView.cs" />
     <EmbeddedResource Include="book_check.resx">
       <DependentUpon>book_check.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="book_rental.resx">
       <DependentUpon>book_rental.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="home.resx">
-      <DependentUpon>home.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -144,8 +146,11 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="user_register.resx">
-      <DependentUpon>user_register.cs</DependentUpon>
+    <EmbeddedResource Include="Views\User_Res.resx">
+      <DependentUpon>User_Res.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\HomeView.resx">
+      <DependentUpon>HomeView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -182,5 +187,6 @@
       <Name>IFW.Data</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
