--- a/library_support_system/library_support_system.csproj
+++ b/library_support_system/library_support_system.csproj
@@ -36,6 +36,9 @@
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.8.0.0\lib\net462\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
+    <Reference Include="Oracle.ManagedDataAccess, Version=4.122.23.1, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL">
+      <HintPath>..\packages\Oracle.ManagedDataAccess.23.9.1\lib\net472\Oracle.ManagedDataAccess.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.4.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.6.0\lib\net462\System.Buffers.dll</HintPath>
@@ -105,11 +108,15 @@
     <Compile Include="book_return.Designer.cs">
       <DependentUpon>book_return.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\BookModel.cs" />
+    <Compile Include="Models\RentalModel.cs" />
     <Compile Include="Models\UserModel.cs" />
-    <Compile Include="Models\HomeModel.cs" />
     <Compile Include="Presenters\HomePresenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\BookRepository.cs" />
+    <Compile Include="Repositories\RentalRepository.cs" />
+    <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="user_check.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -152,6 +159,13 @@
     <EmbeddedResource Include="Views\HomeView.resx">
       <DependentUpon>HomeView.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
+    <None Include="Oracle.DataAccess.Common.Configuration.Section.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Oracle.ManagedDataAccess.Client.Configuration.Section.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -180,12 +194,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\free-icon-power-switch-4139573 %281%29.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\IFW.DATA\IFW.Data.csproj">
-      <Project>{8d481bd9-c1e2-4471-95fa-4276fbf143a3}</Project>
-      <Name>IFW.Data</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
