--- a/library_support_system/packages.config
+++ b/library_support_system/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
+  <package id="Oracle.ManagedDataAccess" version="23.9.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.2" targetFramework="net472" />
   <package id="System.Formats.Asn1" version="8.0.1" targetFramework="net472" />
