강경훈_DBConnection 하드 코딩이 아닌 App.Config에서 선언하여 using으로 참조하게 변경

--- a/library_support_system/app.config
+++ b/library_support_system/app.config
@@ -3,6 +3,12 @@
   <configSections>
     <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.23.1, Culture=neutral, PublicKeyToken=89b483f429c47342" />
   </configSections>
+	<connectionStrings>
+		<add name="OracleDb"
+			 providerName="Oracle.ManagedDataAccess.Client"
+			 connectionString="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=deu.duraka.shop)(PORT=4263))
+         (CONNECT_DATA=(SERVICE_NAME=xe)));User Id=CAPSTONE;Password=CAPSTONE03;" />
+	</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
