강경훈_DB저장오류 수정

--- a/library_support_system/Main.config
+++ b/library_support_system/Main.config
@@ -5,7 +5,10 @@
 	</startup>
 	<!-- ORACLEDB 연결 DB주소로 바꿔주면 됨. -->
 	<connectionStrings>
-		<add name="OracleDb" connectionString="Data Source=deu.duraka.shop:5003/xe;User ID=sys;Password=mCYxbK03o;" providerName="Oracle.ManagedDataAccess.Client" />
+		<add name="OracleDb"
+			 providerName="Oracle.ManagedDataAccess.Client"
+			 connectionString="Data Source=(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=deu.duraka.shop)(PORT=4263))
+         (CONNECT_DATA=(SERVICE_NAME=xe)));User Id=CAPSTONE;Password=CAPSTONE03;" />
 	</connectionStrings>
 	<!-- ORACLEDB 연결 END -->
 	<runtime>
